<resources>
    <string name="app_name">NewsApp</string>
    <string name="google_sign_up">google_sign_up</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="google_login">google login</string>
    <string name="welcome_to_newsapp">Welcome to NewsApp</string>
    <string name="loginlogo">loginlogo</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">User Profile</string>
    <string name="action_logout">Logout</string>
    <string name="create_an_account">Create an Account</string>
    <string name="newsapp">NewsApp</string>
    <string name="explore_trending_news_on_campus">Explore trending news on Campus!</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="todo">TODO</string>
    <string name="action_home">Home</string>
    <string name="bottom_notif">Notifications</string>
    <string name="bottom_profile">Profile</string>
    <string name="bottom_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_btn">Create post</string>
    <string name="username">UserName</string>
    <string name="post_date">Post date</string>
    <string name="heading">Heading</string>
    <string name="post_description">post description</string>
    <string name="profile_image">profile image</string>
    <string name="post_desc_hint">Add description...</string>
    <string name="post_button_hint">Post</string>
    <string name="imagespeak">image</string>
    <string name="posttitle">Add Title...</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="save">Save</string>
    <string name="_0">0</string>
</resources>