<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_post_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/post_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/post_desc_hint"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/post_new_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title_text" />

    <Button
        android:id="@+id/post_new_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/post_button_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_desc" />

    <ImageButton
        android:id="@+id/new_post_image"
        class="com.example.newsapp.CropUtils$CropImageView"
        android:layout_width="0dp"
        android:layout_height="364dp"
        android:contentDescription="@string/imagespeak"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_toolbar"
        app:srcCompat="@drawable/addimage_final" />

    <EditText
        android:id="@+id/post_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/posttitle"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/post_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_image"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>